//===----------------------------------------------------------------------===//
//
// This source file is part of the swift-libp2p open source project
//
// Copyright (c) 2022-2025 swift-libp2p project authors
// Licensed under MIT
//
// See LICENSE for license information
// See CONTRIBUTORS for the list of swift-libp2p project authors
//
// SPDX-License-Identifier: MIT
//
//===----------------------------------------------------------------------===//
//
//  https://github.com/libp2p/js-peer-id/blob/master/src/proto.js

syntax = "proto2";

message PeerIdProto {
    required bytes id = 1;
    optional bytes pubKey = 2;
    optional bytes privKey = 3;
}
